--- a/site/cuteknit/css/style.css
+++ b/site/cuteknit/css/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*Обнуление*/
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700,900);
-* {
+*{
 	padding: 0;
 	margin: 0;
 	border: 0;
@@ -40,8 +40,27 @@ h1,h2,h3,h4,h5,h6 {
 
 /*--------------------*/
 .mainpicture {
-	width: 100%;}
-.main {}
-.middle {}
+	box-shadow: 0 0 20px #AAAAAA;
+	margin: auto;
+	width: 100%;
+	position: relative;}
+.photo {
+	box-shadow: 0 0 20px #000000;
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+	position: absolute;
+	top: 10%;
+	right: 5%;
+	z-index: 1;
+}
+.main{
+	margin: 10px;
+	background-color: rgb(177, 177, 177);
+ }
+.middle {
+	background-color: rgb(115, 115, 115);
+	margin: 10px;
+	padding: 10px;}
 .third {}
 
