--- a/site/cuteknit/css/style.css
+++ b/site/cuteknit/css/style.css
@@ -32,35 +32,35 @@ a, a:visited{text-decoration: none;}
 a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
-
+wrapper {
+	overflow: hidden;
+	}
 h1,h2,h3,h4,h5,h6 { 
 	font-size:inherit; font-weight: 400;
 	}
 
 
 /*--------------------*/
+body{
+	background-color: #db8327;
+	}
 .mainpicture {
 	box-shadow: 0 0 20px #AAAAAA;
 	margin: auto;
 	width: 100%;
-	position: relative;}
-.photo {
-	box-shadow: 0 0 20px #000000;
-	width: 150px;
-	height: 150px;
-	border-radius: 50%;
-	position: absolute;
-	top: 10%;
-	right: 5%;
-	z-index: 1;
 }
-.main{
-	margin: 10px;
-	background-color: rgb(177, 177, 177);
- }
 .middle {
-	background-color: rgb(115, 115, 115);
+	text-align: center;
+	font-size: 300%;
 	margin: 10px;
-	padding: 10px;}
-.third {}
+	padding: 70px;
+}
 
+.last {
+	margin: auto;
+	width: 100%;
+}
+footer p {
+	text-align: center;
+	font-size: 110%;
+	}
